tests/diagnostics/declarations/types/missing_type_keyword/expect.txt
# exit: 1
input/main.lang0:1:1: error: expected keyword 'type' before type declaration
  User :: struct { id: int64 }
  ^
